@@ -4,6 +4,17 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2007/04/23
+	* Fixed bug which totally broke item group bonuses.
+	* Added warnings when setting a pvp/gvg flag removes the other flags on the
+	  same map (gvg and pvp can't coexist on the same map)
+	* Removed the check that prevented you from casting soul-collect when you
+	  already have 5 spirits.
+	* Corrected Magic Rod so it doesn't displays any skill-use animation until
+	  it triggers.
+	* Corrected Steel Body's icon (it actually belongs to AutoBerserk)
+	* Debuff on logout&2 is again set to default, instead of removing food
+	  bonuses now it removes Maximize Power, Maximum Overthrust and Steel Body.
+	  [Skotlex]
 	* Extended the functionality of StringBuf - length and appending a string.
 	* menu/select/prompt script functions support grouped and empty options.
 	  The selected option number is consistent with them.
